# BrickLayer

./: .claudeignore  .gitattributes  .gitignore  .mcp.json  .retro-pending  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEV_EXECUTION_ROADMAP.md  FIX_PLAN.md  FRAMEWORK.md  GITHUB_HANDOFF.md  MASONRY-FRAMEWORK.md  MASONRY_GAP_ANALYSIS.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  ROADMAP.md  RUFLO_GAP_ANALYSIS.md  SELF_HEALING.md  TRAINING_BRANCH_PLAN.md  _test_script.py  agent_db.json  bl-parallel.ps1  bricklayer_launcher.pyw  diag.py  feature_roadmap.md  handoff.md  history.db  mcp_gateway.py  onboard.py  package-lock.json  package.json  pytest.ini  results.tsv  ruff.toml  run_fix.sh  simulate.py  test_api.py  tools-manifest.md
masonry/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  FORGE_NEEDED.md  README.md  ROADMAP.md  __init__.py  agent_registry.yml  hooks-manifest.json  hooks.json  masonry-state.json  monitor-log.tsv  monitor-targets.md  package-lock.json  package.json  program.md  project-brief.md  pyproject.toml  questions.md  requirements.txt  routing_log.jsonl  skills-lock.json  vitest.config.js
masonry/.autopilot/: pre-compact-work.json
masonry/.claude/: settings.local.json
masonry/.claude-plugin/: .mcp.json  plugin.json
masonry/.mas/: errors.jsonl  karen-needed.json  system-status.json
masonry/agent_snapshots/: overseer_trigger.flag
masonry/docs/: deterministic_layer.py  hook-schemas.md  hook_inventory.md  routing_architecture.md  routing_overview.py  semantic_layer.py
masonry/findings/: D1.6.md  D13.1.md  D14.1.md  D15.1.md  D18.1.md  D2.1.md  D2.3.md  D22.1.md  D24.3_fix.md  D33.1.md  D8.2.md  F-w41.1.md  F-w41.2.md  F-w41.3.md  F-w41.4.md  F-w42.1.md  F-w43.1.md  F-w43.2.md  F-w43.3.md  F10.2.md  F11.2.md  F12.2.md  F15.1.md  F16.1.md  F17.1.md  F17.2.md  F2.1.md  F28.1.md  F28.2.md  F28.3.md  F29.2.md  F3.2.md  F30.1.md  F32.2.md  F33.1.md  F35.1.md  F4.3.md  F5.1.md  F5.2.md  F8.1.md  (+71 more)
masonry/hooks/: bricklayer-retro.js  hooks.json
masonry/masonry/: agent_db.json
masonry/mcp_server/: README.md  __init__.py  js_engine.py  server.py
masonry/optimized_prompts/: karen.json  quantitative-analyst.json  research-analyst.json  synthesizer-bl2.json
masonry/scripts/: add_e9_3_records.py  add_e9_4b_fixes.py  backfill_agent_fields.py  backfill_frontmatter.py  backfill_keywords_extractor.py  backfill_registry.py  backfill_routing_keywords.py  backfill_token_history.js  deploy_sft.sh  discover_skill_candidates.py  eval_agent.py  eval_agent_live.py  eval_sft.py  export_sharegpt.py  extract-hooks-manifest.js  finetune_lxc.py  fix_recall_instructions.py  fix_synth_bl2_records.py  fix_synth_bl2_w11.py  fresh_eyes_verify.py  gen_training_data.py  generate_live_records.py  generate_synth_records.py  hook-smoke.js  improve_agent.py  merge_live_records.py  onboard_agent.py  optimize_and_prove.py  optimize_claude.py  optimize_routing.py  optimize_with_claude.py  run_optimization.py  run_r23_1.py  run_vigil.py  safeguard_forge.py  score_all_agents.py  score_code_agents.py  score_findings.py  score_ops_agents.py  score_routing.py  (+6 more)
masonry/skills/: masonry-build.md  masonry-code-review.md  masonry-fix.md  masonry-fleet.md  masonry-init.md  masonry-pipeline.md  masonry-plan.md  masonry-run.md  masonry-security-review.md  masonry-status.md  masonry-team.md  masonry-ultrawork.md  masonry-verify.md
masonry/src/: __init__.py  drift_detector.py  metrics.py  pre-compact-recall.js  tdd-find-test-file.js  writeback.py
masonry/tests/: cli-healloop.test.js  cli-route.test.js  cli-status.test.js  hook-benchmark-cases.js  hook-benchmark-cases2.js  hook-benchmark.js  test-prompt-router-followup.js  test_backfill_frontmatter.py  test_backfill_keywords_extractor.py  test_backfill_routing_keywords.py  test_bl_plugin_eval.py  test_build_queue_verification.py  test_fresh_eyes_verify.py  test_impl_patterns_confidence.test.js  test_improve_agent.py  test_llm_router.py  test_mas_schemas.py  test_optimize_routing.py  test_optimize_with_claude.py  test_phase6_wiring.py  test_plugin_manifests.py  test_score_all_agents_runs.py  test_server.py  test_staged_rollout.py  test_validate_frontmatter.py  test_wiring_completeness.py
masonry/training_data/: scored_all.jsonl  scored_all.jsonl.bak  scored_all_wave13.jsonl  scored_code_agents.jsonl  scored_findings.jsonl  (+4 more)
(+4773 files in other folders)
