[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "masonry"
version = "0.1.0"
description = "Research-first orchestration framework for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "dspy-ai",
]

[tool.setuptools.packages.find]
# Look in the parent directory (repo root) so that the `masonry/` directory
# is discovered as the `masonry` Python package.
where = [".."]
include = ["masonry*"]
