[package]
name = "recall2"
version = "0.1.0"
edition = "2021"
description = "Self-hosted AI memory system — single binary, embedded inference, behavioral graph"

[[bin]]
name = "recall2"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP API
axum = { version = "0.7", features = ["json", "tokio"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Storage
heed = "0.20"
rusqlite = { version = "0.31", features = ["bundled"] }

# Embeddings
fastembed = "4"
ort = { version = "2.0.0-rc.9", features = ["load-dynamic", "download-binaries"], default-features = false }

# Vector index
instant-distance = "0.6"

# Full-text search
tantivy = "0.22"

# Concurrent data structures
dashmap = "5"

# Hashing / dedup
sha2 = "0.10"
hex = "0.4"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Errors
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
config = "0.14"

# HTTP client (for migration from Recall 1.0)
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
